# snake-spectacle

./: AGENTS.md  index.html  openapi.yaml  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
backend/: README.md  pyproject.toml
backend/app/: auth.py  db.py  main.py  models.py
backend/app/routers/: auth.py  leaderboard.py  sessions.py
backend/tests/: conftest.py  test_auth.py  test_leaderboard.py  test_sessions.py
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/src/: index.css
frontend/src/components/: GameBoard.tsx  GameControls.tsx
frontend/src/components/ui/: button.test.tsx
frontend/src/hooks/: useGame.ts
frontend/src/lib/: gameLogic.ts
frontend/src/lib/__tests__/: aiPlayer.test.ts  gameLogic.test.ts
frontend/src/services/: api.ts
src/: App.tsx
src/components/: Header.tsx
src/hooks/: useAuth.ts
src/lib/: aiPlayer.ts
src/lib/__tests__/: aiPlayer.test.ts  gameLogic.test.ts
src/pages/: Auth.tsx  Index.tsx  Leaderboard.tsx  Watch.tsx
